fix layout bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,8 +184,9 @@ p {
   position: relative;
   top: -2px;
 }
+
 .main-wrapper .section {
-  margin-bottom: 60px;
+ margin-bottom: 20px
 }
 .main-wrapper .experiences-section .item {
   margin-bottom: 30px;
